  - Our copy does not get in the way anymore.
- enhancements of the MSVC++ builds, including optimizations using yasm
- general build system fixes
- Legacy build system is gone.
- code cleanup
  - signed/unsigned integer usage, make compilers more happy)
  - simplified synth selection code (it is _less_ code now, and does more)

1.7.3
---
  - Fix a regression introduced with the --doublespeed fix. Now seeking should be a lot smoother again.

1.7.2
---
  - Fix a possible vulnerability in the ID3 code (negative encoding values).

1.7.1
---
  - Just one fix for making the RVA switch in terminal and generic control mode work again (instead of plain silence).

1.7.0
---
- Lots of output format fun!
  - now supporting 8, 16, 32 bit signed/unsigned integers,
    32bit float (64bit float can be hacked in quickly)
  - optimized decoders use fallback routines for non-optimized
    formats transparently
  - flexible resampling is automatically chosen when output does
    not support standard rates (like a JACK server)
  - That meant quite some restructuring in the decoder code...
- Lots of core functionality now optional, enabling small-footprint
  builds of libmpg123.
  - choosing among the MPEG layer codes
  - NtoM resampling
  - downsampling
  - feeder API (mpg123_open_feed())
  - ID3v2
  - String API
  - ICY
  - output formats
  - error/warning message printouts
  - ... a layer3-only shared libmpg123 can be just 107K on x86-64
    or 94K on x86
- --preload (tune prefill before playback for buffered mode)
- win64 support (one report at least;-), modules working on Windows
- Windows/MSVC++: fixed handling of unicode file names,
  mpg123_topen() now actually working there
  - You are obliged to use mpg123_tclose() now!
- using "plugins" subdir relative to mpg123 binary
  (in addition to ../lib/mpg123)
- switch to libtool 2.2 and automake 1.10 for the build scripts
  - though no update to new libtool 2 API, yet
- some portability fixes